[tool.poetry]
name = "chomosuke-profile"
version = "0.1.0"
description = ""
authors = ["Richard Li <a13323600@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^1.57"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
